# calc_dsl

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  package.json  pyproject.toml  run.py  test_list_operations.py
calc_dsl/: __init__.py  __main__.py  app.py
